--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.naidiuk</groupId>
-    <artifactId>TestOOP</artifactId>
+    <artifactId>UsersBase</artifactId>
     <version>1.0</version>
 
     <properties>
